test/echoheaders1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoheaders1
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - echoheaders1.testing.freestyleiot.com
    secretName: echoheaders1-tls

  rules:
  - host: echoheaders1.testing.freestyleiot.com
    http:
      paths:
      - path: /
        backend:
          serviceName: echoheaders
          servicePort: 80
